force-app/main/default/objects/ArdiraSurvey__Section__c/ArdiraSurvey__Section__c.object-meta.xml
<CustomObject>
    <description>The object represents a section of a survey</description>
    <label>Ardira Section</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>