force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Adjust_Question_Layout__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Adjust_Question_Layout__c</fullName>
    <description>You can decide to display a question on it’s own row or two consecutive questions side-by-side for this specific section. For the best respondent experience, we automatically override certain layout options when you take a survey on a tablet or mobile device.</description>
    <inlineHelpText>You can decide to display a question on its own row or two consecutive questions side-by-side for this specific section. For the best experience, system may overrides certain layout options when a user takes a survey on a tablet or mobile device.</inlineHelpText>
    <label>Question Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display question in single row in 1-column layout</fullName>
            </value>
            <value>
                <fullName>Display two questions side-by-side in 2-column layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>