force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Allow_to_Repeat_Section__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Allow_to_Repeat_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, responder will be able to respond to all questions in the section multiple times.</description>
    <inlineHelpText>When enabled, responder will be able to respond to all questions in the section multiple times.</inlineHelpText>
    <label>Allow to Repeat Section</label>
    <type>Checkbox</type>
</CustomField>