force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Alternate_Row_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Alternate_Row_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option will work with grid layout (Repeating section). It will set alternate color of row.</description>
    <inlineHelpText>This option will work with grid layout (Repeating section). It will set alternate color of row.</inlineHelpText>
    <label>Alternate Row Color</label>
    <type>Checkbox</type>
</CustomField>