force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__C_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Background_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Color to be used as the background for a section.</description>
    <inlineHelpText>Specify the background color for this section.</inlineHelpText>
    <label>Background Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>