force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__C_Display_Section_Description__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Display_Section_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, display section description.</description>
    <inlineHelpText>Enable to show the section description when user responds to questions in the section.</inlineHelpText>
    <label>Show Section Description</label>
    <type>Checkbox</type>
</CustomField>