force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__C_Display_Section_Title__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Display_Section_Title__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, display section title with a question.</description>
    <inlineHelpText>Enable to show section title when user responds to questions in the section.</inlineHelpText>
    <label>Show Section Title</label>
    <type>Checkbox</type>
</CustomField>