force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__C_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__C_Text_Color__c</fullName>
    <defaultValue>&quot;#000000&quot;</defaultValue>
    <description>Color to be used for the section text.</description>
    <inlineHelpText>Specify the text color for this section.</inlineHelpText>
    <label>Text Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>