force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Description__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Description__c</fullName>
    <description>Description of this section.</description>
    <inlineHelpText>Enter a brief description of this section.</inlineHelpText>
    <label>Description</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>