force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Logical_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Logical_Id__c</fullName>
    <description>Unique value used to identify a section. Use this instead of database id to uniquely identify an exported/imported section.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique value used to identify a section. Use this instead of database id to uniquely identify an exported/imported section.</inlineHelpText>
    <label>Logical Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>