force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Max_Repeat_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Max_Repeat_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum number of times a survey participant can repeat the section when responding.</description>
    <inlineHelpText>Maximum number of times a survey participant can repeat the section when responding.</inlineHelpText>
    <label>Max Repeat Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>