force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Parent__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent section of this section.</description>
    <inlineHelpText>Parent section of this section.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>ArdiraSurvey__Section__c</referenceTo>
    <relationshipLabel>Sub Sections</relationshipLabel>
    <relationshipName>Sub_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>