force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Render_as_Grid__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Render_as_Grid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option will render repeating section in a grid (Tabular) format.</description>
    <inlineHelpText>This option will render repeating section in a grid (Tabular) format.</inlineHelpText>
    <label>Render as Grid</label>
    <type>Checkbox</type>
</CustomField>