force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Short_Title__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Short_Title__c</fullName>
    <description>First 250 characters of the section text. Used in list view, formula fields etc.</description>
    <inlineHelpText>First 250 characters of the section text. Used in list view, formula fields etc.</inlineHelpText>
    <label>Short Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>