force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <description>Section is part of this survey.</description>
    <inlineHelpText>Section is part of this survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>