force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Survey_Processing_Interface__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Processing_Interface__c</fullName>
    <description>Configure a public class name that implements svProcessEvent(eventInfo) method to process survey data and return one or more question results to update on client side.</description>
    <inlineHelpText>Configure a public class name that implements svProcessEvent(eventInfo) method to process survey data and return one or more question results to update on client side.</inlineHelpText>
    <label>Survey Processing Interface</label>
    <length>80</length>
    <type>Text</type>
</CustomField>