force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Title__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Title__c</fullName>
    <description>Descriptive title for the survey section.</description>
    <inlineHelpText>Enter a title for this section.</inlineHelpText>
    <label>Title</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>