force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Validate_Unique_Answers__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validate_Unique_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option ensures that each question within this section must have a unique answer.</description>
    <inlineHelpText>Enabling this option ensures that each question within this section must have a unique answer.</inlineHelpText>
    <label>Enforce Unique Answers</label>
    <type>Checkbox</type>
</CustomField>