force-app/main/default/objects/ArdiraSurvey__Section__c/fields/ArdiraSurvey__Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Error_Message__c</fullName>
    <description>This field stores a custom validation message that is displayed when response validation rules fail.</description>
    <inlineHelpText>This field stores a custom validation message that is displayed when response validation rules fail.</inlineHelpText>
    <label>Invalid Answer Error Message</label>
    <length>8192</length>
    <type>Html</type>
</CustomField>